src/pj/poco/test/neg/NPARMCT3.POC
/* Test that parameters are counted when there are too many */
#pragma poco echo "expect>too many parameters in call to function 'mul'"

int mul(int i, int j)
{
return i*j;
}

main()
{
mul(1,2,3);
puts("I shouldn't have compiled!");
}
